--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -201,3 +201,4 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 .form-search .input-append .btn.ok { background:#666; color:#fff; font-size:14px; font-weight:bold; box-shadow:none; text-shadow:none; padding:0 5px; border:0; }
 .menu .search-query.input-medium { border-right: none; background:#fff url(/portal/images/capaPrograma/cedoc/lupa.jpg) no-repeat 2px; padding:0 0 0 20px; }
 #imagem-destacada { display: block; max-height: 438px; max-width: 980px; overflow: hidden;}
+.span4 .imagem-destaque {  }
