--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -31,6 +31,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .hero-unit .col-dir {  float:right; width: 39%; }
 .hero-unit .fechar { background:#666; text-transform:uppercase; color:#fff; margin-top:20px; border:none; text-shadow:none; padding:0 5px; font-weight:bold; float:right; font-size:12px;  }
 .hero-unit .menu-jc {clear: both; margin-top:60px; float: right;  }
+.hero-unit .menu-jc p,
 .hero-unit .menu-jc a { text-transform:uppercase; color:#666; font-weight:bold; float:left; text-align:right; font-size:14px; height:20px; line-height:20px; }
 .hero-unit .menu-jc a:hover { text-decoration:none; }
 .hero-unit .menu-jc .como { background:#fff; padding:0 5px;}
