--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -37,14 +37,14 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .hero-unit .menu-jc .como { background:#fff; padding:0 5px;}
 .hero-unit .menu-jc .como:hover { background:#666; color:#fff; }
 .hero-unit .menu-jc span { margin:-6px 10px 0 10px; float:left; color:#c4c4c4; font-size: 18px; }
-.hero-unit .menu-jc .numero { background:#666; color:#ccff33; padding:0 5px; margin:0; font-size:14px; min-width:20px; text-align:center;  }
+.hero-unit .menu-jc .numero { background:#666; color:#ccff33; padding:0 5px; margin:0; font-size:14px; min-width:20px; text-align:center; }
 .hero-unit .menu-jc .seta { border:5px solid transparent;  border-left-color: #666; width: 0; height:0; margin:0; padding:0; display:block; float:left; margin-top:5px; }
 .hero-unit .menu-jc .offline { color:#ce0002;}
 .conteudo h2 { font-size:22px; line-height:24px; margin:20px 0 5px 0; color:#666; text-transform:uppercase; }
 .accordion-heading .accordion-toggle { background:#666; color:#fff; text-transform:uppercase; font-weight:bold; padding:4px 20px; border:1px dotted #fff; font-size:16px; text-decoration:none; position:relative; }
 .accordion-heading .accordion-toggle:hover,
 .accordion-heading .accordion-toggle.ativo { background:#333; text-decoration:none !important; }
-.accordion-heading .accordion-toggle{position:relative; }
+.accordion-heading .accordion-toggle{position:relative; z-index:50000;}
 .accordion-heading .accordion-toggle i { margin:4px 10px 0 0; }
 .accordion-body img { max-width: 140px; float:left;  margin-right:10px;}
 .accordion-body a { color:#000; text-decoration:underline; }
@@ -99,7 +99,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 }
 
 @media screen and (max-width: 1024px){
-  .hero-unit .col-dir { max-width: 18%; }
+  .hero-unit .col-dir { max-width: 33%; }
   .hero-unit .col-esq { max-width:60%; margin-left:0; }
   .hero-unit .menu-jc { margin-top:20px; }
   .hero-unit .menu-jc .como { margin-bottom:10px; }
@@ -108,26 +108,50 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .conteudo .span8 { width:100% }
   .conteudo .span4 { width:100%; margin-left:0; }
   .accordion-inner iframe { width: 100%; height:590px;} 
-  .hero-unit .col-dir span.barra { display:none; }
   .hero-unit .menu-jc a.online { padding-right:10%; }
+}
+
+@media screen and (max-width: 980px){
+  .hero-unit .col-dir { max-width: 20%; }
+  .hero-unit .col-esq { max-width:40%; margin-left:0; }
+  .hero-unit .col-dir span.barra { display:none; }
+  /*
+  .hero-unit .menu-jc { margin-top:20px; }
+  .hero-unit .menu-jc .como { margin-bottom:10px; }
+  .hero-unit .menu-jc a { font-size:12px; }
+  .hero-unit .menu-jc span { margin-top:-6px;} 
+  .conteudo .span8 { width:100% }
+  .conteudo .span4 { width:100%; margin-left:0; }
+  .accordion-inner iframe { width: 100%; height:590px;} 
+  .hero-unit .menu-jc a.online { padding-right:10%; }
+  */
 }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media (max-width : 768px)  {
   .hero-unit .bgtopo { display:none; }
   .conteudo { background:#fff; overflow:hidden; }
+  .accordion-group .conteudo { background:#eee; }
   .accordion-inner iframe { width:100%; height:410px; }
   .hero-unit { padding:1%; }
-  .hero-unit .col-esq { width:50%; margin-left:0; }
-  .hero-unit .col-dir { min-width:50%; float:left; }
+  .hero-unit .col-esq { max-width: 100%; width:40%; margin-left:0; }
+  .hero-unit .col-dir { max-width:100%; width:48%; }
   .hero-unit {  height:auto;}
   .hero-unit .col-esq p { text-align:center; }
   .hero-unit .col-esq h1 { margin:2% auto; }
   .hero-unit .redes { min-width:350px; margin:0 auto; }
   .hero-unit .menu-jc { margin-top:5px; float:right; }
-  .hero-unit .col-dir span.barra { display:none; }
+  .hero-unit .col-dir span.barra { display:block; }
   .hero-unit .col-dir a { display:block;  }
-  .hero-unit .col-dir .online { margin-top:5px; }
+  .hero-unit .col-esq p { margin-bottom:6px; }
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+  .hero-unit .col-esq p { margin:22px 0; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
@@ -141,7 +165,8 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .col-dir span.barra { display:none;}
   .hero-unit .menu-jc { float:left; margin-left:1%; }
   .hero-unit .menu-jc .offline,
-  .hero-unit .menu-jc a.online { clear:both; }
+  .hero-unit .menu-jc .online { clear:both; }
+  
 }
 
 .accordion-body ul { margin:0; padding:15px;}
@@ -159,4 +184,9 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .logo-link img { padding:0 0 15px 0; }
 .modal-backdrop.fade.in { z-index: 100000; }
 .modal.hide.fade.in { z-index: 1000000; }
-
+.icon-enquete { background:url(/portal/images/capaPrograma/segundatela/jornaldacultura/icon-enquete.png) no-repeat; width: 16px; height:16px; margin-top:2px !important; }
+.progress { margin-bottom:0; }
+#votar,
+#form .btn { background:#333; border:none;  border-radius:0; -moz-border-radius: 0; -webkit-border-radius: 0; color:#fff; box-shadow: none; text-shadow:none; padding:0 5px; height:20px; line-height:20px; text-transform:uppercase; font-weight:bold; margin-top:10px; float:left; font-family: 'source_sans_proregular'; font-size:14px;}
+#form .ver-resultado { margin:10px 0 0 5px; display:block; float:left;}
+.accordion-body .resultado p { padding:0 !important; }
