--- a/web/cedoc/includes/footer.inc.html
+++ b/web/cedoc/includes/footer.inc.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  </div> <!-- /container -->    
+    </div> <!-- /container -->    
     <div id="footer">
       <div class="container">
         <a class="voltar-topo" href="#geral">Voltar ao topo</a>
@@ -50,9 +50,9 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    
+    <!-- <script src="/portal/js/jquery-1.7.2.min.js" type="text/javascript"></script> -->
     <script type="text/javascript" src="/portal/js/bootstrap/transition.js"></script>
-    <script type="text/javascript" src="/portal/js/bootstrap/alert.js"></script>
+    <!--<script type="text/javascript" src="/portal/js/bootstrap/alert.js"></script>-->
     <script type="text/javascript" src="/portal/js/bootstrap/modal.js"></script>
     <script type="text/javascript" src="/portal/js/bootstrap/dropdown.js"></script>
     <script type="text/javascript" src="/portal/js/bootstrap/scrollspy.js"></script>
