--- a/web/portal/css/tvcultura/geral2.css
+++ b/web/portal/css/tvcultura/geral2.css
@@ -941,3 +941,5 @@ div.jp-audio {clear:both;}
 .rodape-cmais a{color:#ff6625 !important; font-weight: bold !important; text-decoration: none !important;}
 .rodape-cmais a:hover{text-decoration: none !important;}
 .rodape-cmais p{line-height:20px;margin:10px 0; text-align:left;}
+
+.box-interna .texto hr { visibility:inherit; }
