--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -8,7 +8,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .hero-unit .redes { text-align:left; }
 .hero-unit .col-dir {  float:right; width: 39%; }
 
-.hero-unit .menu-jc {clear: both; margin-top:60px; float: right;  }
+.hero-unit .menu-jc {clear: both; margin-top:60px; float: right; width:100%;  }
 .hero-unit .menu-jc p,
 .hero-unit .menu-jc a { text-transform:uppercase; color:#666; font-weight:bold; float:left; text-align:right; font-size:14px; height:20px; line-height:20px; }
 .hero-unit .menu-jc a:hover { text-decoration:none; }
@@ -25,8 +25,9 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 @media screen and (max-width: 1200px){
   .hero-unit .col-dir { max-width: 36%; }
   .hero-unit .col-esq { max-width:60%; margin-left:0; }
-  .hero-unit .menu-jc { margin-top:20px; }
+  /*.hero-unit .menu-jc { margin-top:20px; }*/
   .hero-unit .menu-jc .como { margin-bottom:10px; }
+  .hero-unit .menu-jc a,
   .hero-unit .menu-jc a { font-size:12px; }
   .hero-unit .menu-jc span { margin-top:-6px;} 
 }
@@ -74,7 +75,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .col-esq p { text-align:center; }
   .hero-unit .col-esq h1 { margin:2% auto; }
   .hero-unit .redes { min-width:350px; margin:0 auto; }
-  .hero-unit .menu-jc { margin-top:5px; float:right; }
+  .hero-unit .menu-jc { /*margin-top:5px;*/ float:right; }
   .hero-unit .col-dir span.barra { display:block; }
   .hero-unit .col-dir a { display:block;  }
   .hero-unit .col-esq p { margin-bottom:6px; }
