--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -40,7 +40,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .menu-jc p,
   .hero-unit .menu-jc a { font-size:12px; }
   .hero-unit .menu-jc span { margin-top:-6px;} 
-  .conteudo .span8 { width:100% }
+  .conteudo .span8 { width:100%; min-height:500px; }
   .conteudo .span4 { width:100%; margin-left:0; }
   .accordion-inner iframe { width: 100%; height:590px;} 
   .hero-unit .menu-jc a.online { padding-right:10%; }
