--- a/web/portal/css/tvcultura/sites/segundatela/aovivo.css
+++ b/web/portal/css/tvcultura/sites/segundatela/aovivo.css
@@ -1,1 +1,3 @@
 body { background:#fff url(http://cmais.com.br/portal/images/capaPrograma/segundatela/bg-aovivo.jpg) repeat-x;}
+.hero-unit { margin-bottom:60px; }
+.col-dir2 { width: 640px; margin:40px auto; clear:both; }
