--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -92,3 +92,8 @@
 /* /ie */
 
 .progress .bar { color:#333; }
+
+.accordion p iframe { width:610px; height:371px; }
+@media (max-width : 480px)  {
+  .accordion p iframe { width:436px; height:265px; }
+}
