--- a/web/portal/css/tvcultura/sites/segundatela/aovivo.css
+++ b/web/portal/css/tvcultura/sites/segundatela/aovivo.css
@@ -1,7 +1,7 @@
 body { background:#fff url(http://cmais.com.br/portal/images/capaPrograma/segundatela/bg-aovivo.jpg) repeat-x;}
 .hero-unit { margin-bottom:60px; }
-.col-esq2 { width: 640px; margin:40px 0; float: left; }
+.col-esq2 { width: 640px; float: left; }
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container { margin:0 auto;} }
 .hero-unit .bgtopo h1 { margin-top:7px;} 
 .col-dir2 { width:300px; float:left; margin-left:20px; text-align:left;}
-.col-dir2 a { margin:20px 0; text-decoration:underline; }   
+.col-dir2 a { margin:20px 0; text-decoration:underline; display:block; }   
