--- a/web/portal/css/tvcultura/sites/segundatela/aovivo.css
+++ b/web/portal/css/tvcultura/sites/segundatela/aovivo.css
@@ -5,6 +5,6 @@ body { background:#fff url(http://cmais.com.br/portal/images/capaPrograma/segund
 .hero-unit .bgtopo h1 { margin-top:7px;} 
 .col-dir2 { width:300px; float:left; margin-left:20px; text-align:left;}
 .col-dir2 a { margin:20px 0; text-decoration:underline; display:block; }   
-.downloads { clear:both; text-align:left; }
-.downloads li { list-style: disc; }
+.download { clear:both; text-align:left; }
+.download li { list-style: disc; }
  
