--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -96,6 +96,7 @@
 .accordion-body p img,
 .accordion-body iframe { width:100% !important; }
 .accordion-body iframe { min-height:390px; }
+.accordion-body a img { width:auto !important; }
 
 @media screen and (max-width: 1024px){
   .accordion-body iframe {  min-height:515px; }
@@ -104,7 +105,6 @@
 @media screen and (max-width: 480px){
   .accordion-body img,
   .accordion-body p img { min-width:310px; }
-  .accordion-body a img { min-width:120px; }
   .accordion-body iframe { min-height:220px; height:220px; }
 }
 
