--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -68,10 +68,9 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .conteudo { background:#fff; overflow:hidden; }
   .accordion-group .conteudo { background:#eee; }
   .accordion-inner iframe { width:100%; height:410px; }
-  .hero-unit { padding:1%; }
+  .hero-unit { padding:1%; min-height:186px; }
   .hero-unit .col-esq { max-width: 100%; width:40%; margin-left:0; }
   .hero-unit .col-dir { max-width:100%; width:48%; }
-  .hero-unit {  height:auto;}
   .hero-unit .col-esq p { text-align:center; }
   .hero-unit .col-esq h1 { margin:2% auto; }
   .hero-unit .redes { min-width:350px; margin:0 auto; }
@@ -87,6 +86,7 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
   .hero-unit .col-esq p { margin:22px 0; }
+  .hero-unit { padding-right: 10px; min-height:200px;}
 }
 
 /* Smartphones (portrait and landscape) ----------- */
