--- a/web/portal/css/tvcultura/sites/segundatela/geral.css
+++ b/web/portal/css/tvcultura/sites/segundatela/geral.css
@@ -117,6 +117,11 @@ and (orientation : landscape) {
   .conteudo .span4 { width:38% !important; margin-left:2% !important; }
 }
 
+@media screen and (max-device-width: 1024px){
+  .accordion-heading .accordion-toggle { padding:10px 20px; }
+  .accordion-heading { margin-bottom:5px; }
+}
+
 
 
 
