--- a/web/portal/css/tvcultura/sites/rodaviva.css
+++ b/web/portal/css/tvcultura/sites/rodaviva.css
@@ -2113,6 +2113,7 @@ a.memRoda img{
 	margin: 105px 0 105px 105px !important;
 }
 
+/*.transmissaoH ul li { margin-right:118px; }*/
 .transmissaoH ul li { margin-right:118px; }
 .transmissaoH ul li.ytb { margin-right:0; }
 
