--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -21,7 +21,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 .hero-unit .redes { text-align:left; }
 .hero-unit .col-dir {  float:right; width: 39%; }
 
-.hero-unit .menu-jc {clear: both; margin-top:85px; float: right; width:300px; }
+.hero-unit .menu-jc {clear: both; margin-top:40px; float: right; width:300px; }
 .hero-unit .menu-jc p,
 .hero-unit .menu-jc a { text-transform:uppercase; color:#666; font-weight:bold; float:left; text-align:right; font-size:14px; height:20px; line-height:20px; }
 .hero-unit .menu-jc a:hover { text-decoration:none; }
@@ -49,7 +49,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
 @media screen and (max-width: 1024px){
   .hero-unit .col-dir { max-width: 33%; }
   .hero-unit .col-esq { max-width:60%; margin-left:0; }
-  .hero-unit .menu-jc { margin-top:120px; }
+  /*.hero-unit .menu-jc { margin-top:120px; }*/
   .hero-unit .menu-jc .como { margin-bottom:10px; }
   .hero-unit .menu-jc p,
   .hero-unit .menu-jc a { font-size:12px; }
@@ -65,6 +65,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .col-dir { max-width: 20%; }
   .hero-unit .col-esq { max-width:40%; margin-left:0; }
   .hero-unit .col-dir span.barra { display:none; }
+  .hero-unit .menu-jc { width:155px; }
   /*
   .hero-unit .menu-jc { margin-top:20px; }
   .hero-unit .menu-jc .como { margin-bottom:10px; }
@@ -83,7 +84,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .conteudo { background:#fff; overflow:hidden; }
   .accordion-group .conteudo { background:#eee; }
   .accordion-inner iframe { width:100%; height:410px; }
-  .hero-unit { padding:1%; min-height:215px; }
+  .hero-unit { padding:1%; min-height:/*215px*/186px; }
   .hero-unit .col-esq { max-width: 100%; width:40%; margin-left:0; }
   .hero-unit .col-dir { max-width:100%; width:48%; }
   .hero-unit .col-esq p { text-align:center; }
@@ -93,7 +94,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .hero-unit .col-dir span.barra { display:block; }
   .hero-unit .col-dir a { display:block;  }
   .hero-unit .col-esq p { margin-bottom:6px; }
-  #box-clock {margin-top:130px;}
+  /*#box-clock {margin-top:130px;}*/
 }
 
 /* iPads (portrait) ----------- */
@@ -118,13 +119,13 @@ and (orientation : portrait) {
   .hero-unit .menu-jc { float:left; margin-left:1%; margin-top:9px; }
   .conteudo .span8 { min-height:500px; }
   .hero-unit .col-esq p { text-align:center; }
-
-  #box-clock {margin:170px 30px;}
+  .hero-unit { min-height:260px; }
+  /*#box-clock {margin:170px 30px;}*/
   
 }
 
 /* clock */
-#box-clock{width:122px; height:40px; background: #cccccc; display: block; position:absolute; top:10px; right:20px;}
+#box-clock{width:122px; height:40px; background: #cccccc; display: block; position:relative; top:10px; right:20px; float:right;}
 #box-clock #no-ar{width: 60px;background: #FFF;float: left;height: 30px;margin: 5px;}
 #box-clock #no-ar p{text-align:center; color:#ff0000;font-family:'source_sans_probold', Arial, Helvetica, sans-serif; text-transform:uppercase; font-weight: normal; }
 #box-clock li{line-height: 30px;list-style: none;float: left; font-family:'source_sans_probold', Arial, Helvetica, sans-serif; color:#ccff33; font-weight: normal;}
