--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -84,7 +84,7 @@ body { background:#fff url(/portal/images/capaPrograma/segundatela/jornaldacultu
   .conteudo { background:#fff; overflow:hidden; }
   .accordion-group .conteudo { background:#eee; }
   .accordion-inner iframe { width:100%; height:410px; }
-  .hero-unit { padding:1%; min-height:/*215px*/186px; }
+  .hero-unit { padding:1%; min-height:/*215px*/187px; }
   .hero-unit .col-esq { max-width: 100%; width:40%; margin-left:0; }
   .hero-unit .col-dir { max-width:100%; width:48%; }
   .hero-unit .col-esq p { text-align:center; }
@@ -104,8 +104,8 @@ and (max-device-width : 1024px)
 and (orientation : portrait) {
   .hero-unit .col-esq p { margin:22px 0; }
   .hero-unit { padding-right: 10px; min-height:200px;}
-    .hero-unit .menu-jc { float:left; margin-top:140px; }
-    .hero-unit .redes { min-width:350px; margin-left:30px; }
+  /*.hero-unit .menu-jc { float:left; margin-top:140px; }*/
+  .hero-unit .redes { min-width:350px; margin-left:30px; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
