--- a/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
+++ b/web/portal/css/tvcultura/sites/segundatela/jornaldacultura.css
@@ -103,7 +103,7 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
   .hero-unit .col-esq p { margin:22px 0; }
-  .hero-unit { padding-right: 10px; min-height:200px;}
+  /*.hero-unit { padding-right: 10px; min-height:200px;}*/
   /*.hero-unit .menu-jc { float:left; margin-top:140px; }*/
   .hero-unit .redes { min-width:350px; margin-left:30px; }
 }
